--- a/main.css
+++ b/main.css
@@ -244,7 +244,7 @@ hr {
 
 /* Desktop view */
 
-@media (min-width: 50em) {
+@media (min-width: 60em) {
   .faq {
     flex-direction: row;
     margin-top: 8rem;
@@ -266,16 +266,19 @@ hr {
   .box-image {
     display: block;
     position: absolute;
-    top: 60%;
-    transform: translateY(-60%);
+    top: 70%;
+    transform: translateY(-70%);
     left: -10%;
     z-index: 100;
   }
 
   .primary-img {
-    width: 100%;
-    position: initial;
-    transform: translateX(-100px);
+    min-width: 200%;
+    display: block;
+    position: absolute;
+    top: 40%;
+    transform: translateY(-40%);
+    left: -20%;
   }
 
   .secondary-img {
